# Lians

./: .dockerignore  .gitignore  BENCHMARK.md  CHANGELOG.md  Dockerfile  Dockerfile.glama  HIPAA_SAFEGUARDS.md  LICENSE  MARKET.md  README.md  RELEASING.md  SCALE.md  TESTING.md  fly.toml  lians-gtm-plan.md  pyproject.toml  render.yaml  server.json
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  integration_request.yml  methodology_correction.yml
.github/scripts/: smoke_mcp_container.py
.github/workflows/: publish-lian-npm.yml  publish-lian.yml  publish-mcp-container.yml  test.yml
agentmem/: .env.demo  .env.example  DEPLOY.md  alembic.ini  docker-compose.yml
agentmem/alembic/: env.py  script.py.mako
agentmem/benchmarks/: compare_regulated.py  finance_bench.py  locomo_dump_mem0.py  locomo_tokens.py  longmemeval_lians.py  longmemeval_replay.py  regulated_eval.py  supersession_eval.py
agentmem/examples/: langchain_demo.py  research_agent_demo.py
agentmem/grafana/: agentmem-dashboard.json
agentmem/scripts/: run_benchmark.py  seed_demo.py  verify_pgvector.py
agentmem/sdk/python/: README.md  pyproject.toml
agentmem/sdk/python/agentmem_sdk/: __init__.py  client.py  crewai_integration.py  langgraph_integration.py  local_client.py  sync_client.py
agentmem/sdk/python/lian/: __init__.py  autogen_integration.py  client.py  crewai_integration.py  langchain_integration.py  langgraph_integration.py  local_client.py  openai_agents_integration.py  sync_client.py
agentmem/sdk/python/lians/: __init__.py  client.py  harness.py  local_client.py  mcp_server.py  sync_client.py
agentmem/tests/: conftest.py  test_adapters.py  test_admin.py  test_admission.py  test_api.py  test_audit.py  test_audit_chain.py  test_auto_metadata.py  test_backtest.py  test_compliance.py  (+35 more)
demo/: index.html
docs/: CODE_OF_CONDUCT.md  alternatives-mem0-self-hosted.md  billing.md  competitive-landscape.md  compliance.md  deploy.md  dispute-ladder.md  glama-deployment.md  governor-integration.md  install.md  institutional-proof-kit.md  pricing-tiers.md  publishing.md  testing.md  verticals.md  website-layout.md  worm-storage.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  migrate-job.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml
sdk/python/: pyproject.toml
sdk/python/src/agentmem_sdk/: __init__.py  client.py  webhooks.py
sdk/python/src/lian/: __init__.py  client.py  webhooks.py
sdk/python/tests/: test_client.py
(+117 files in other folders)
