[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmem-sdk"
version = "0.1.0"
description = "Python SDK for AgentMem — bitemporal financial memory with SEC 17a-4 audit chain and GDPR crypto-shred"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "memory", "finance", "agents", "langchain", "langgraph", "crewai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.25"]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
langgraph = ["langchain-core>=0.2", "langgraph>=0.1"]
crewai   = ["crewai>=0.28"]
local    = ["sqlalchemy>=2.0", "aiosqlite>=0.19"]
all      = [
    "agentmem-sdk[langchain,langgraph,crewai,local]",
]

[project.urls]
Source = "https://github.com/etanbuns/Ai_Mem_Soft"

[tool.hatch.build.targets.wheel]
packages = ["agentmem_sdk"]
